--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
+annotated-types==0.7.0
+anyio==3.7.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
 fastapi==0.104.1
-uvicorn==0.24.0
+gunicorn==23.0.0
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+packaging==25.0
 pydantic==2.4.2
-requests==2.31.0
+pydantic_core==2.10.1
 python-dotenv==1.0.0
+PyYAML==6.0.2
+requests==2.31.0
+sniffio==1.3.1
+starlette==0.27.0
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websockets==15.0.1
